crate/sinex-macros/tests/compile_fail/source_definition_invalid_privacy_tier.stderr
error: unknown privacy_tier 'SuperSensitive'; expected Public, Sensitive, or Secret
 --> tests/compile_fail/source_definition_invalid_privacy_tier.rs:5:10
  |
5 | #[derive(SourceDefinition)]
  |          ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `SourceDefinition` (in Nightly builds, run with -Z macro-backtrace for more info)
